# my_tuple

./: Cargo.toml  README.md
src/: examples.rs  impls.rs  lib.rs  macros.rs  mod.rs  patterns.rs  test.rs  traits.rs  tuple.rs  tuple_select.rs
src/old/: tuple_select.rs
