
[package]
name = "my_tuple"
version = "0.1.1"
edition = "2021"
authors = ["XNTEABDSC"]
description = "A pretty implementation of tuple"
keywords=["tuple"]
repository="https://github.com/Xx-xXXxX/my_tuple"
homepage ="https://github.com/Xx-xXXxX/my_tuple"
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wacky_traits={path="../wacky_traits",version="^1.0.0"}
# proc-macro2 = "1.0"
